--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Galaxy Adventures</title>
+  <title>Galaxy Adventures by vyom</title>
 </head>
 <body style="margin: 0; padding: 0; background-color: #000; font-family: Arial, sans-serif; color: #fff; text-align: center;">
  
