--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               background-image: url('https://www.nasa.gov/sites/default/files/thumbnails/image/stsci-h-p2001a-m-2000x1500.png');
               background-size: cover; z-index: -1; opacity: 0.3;"></div>
  
-  <h1 style="margin-top: 50px; font-size: 3em; animation: glow 2s ease-in-out infinite alternate;">🚀 Galaxy Adventures</h1>
+  <h1 style="margin-top: 50px; font-size: 3em; animation: glow 2s ease-in-out infinite alternate;">🚀 Galaxy Adventures by vyom</h1>
  
   <p style="max-width: 600px; margin: auto; font-size: 1.2em; padding: 10px;">
     Join our cosmic journey as we explore mysterious planets, glowing nebulae, and the infinite stars.
